--- a/templates/config.yaml
+++ b/templates/config.yaml
@@ -1,3 +1,3 @@
 default:
-    extension: .toml
-    output: colors
+    supported_systems: [base16]
+    filename: "colors/{{ scheme-system }}-{{ scheme-slug }}.toml"
